--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.4",
+    "classnames": "^2.2.6",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.0",
     "gatsby-source-datocms": "^2.5.9",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.0",
+    "postcss": "^8.2.4",
     "react": "^16.13.1",
+    "react-datocms": "^1.5.0",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.0.2"
   }
 }
