--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.4",
-    "classnames": "^2.2.6",
-    "dotenv": "^8.2.0",
-    "gatsby": "^3.14.2",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-postcss": "^3.7.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^3.14.1",
-    "gatsby-source-datocms": "^2.5.12",
-    "postcss": "^8.3.9",
-    "react": "^16.13.1",
-    "react-datocms": "^1.5.3",
-    "react-dom": "^16.13.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "autoprefixer": "^10.3.4",
+    "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
+    "gatsby": "^3.13.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-postcss": "^4.13.0",
+    "gatsby-plugin-react-helmet": "^4.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-datocms": "^2.6.18",
+    "gatsby-transformer-sharp": "^3.13.0",
+    "postcss": "^8.3.6",
+    "react": "^17.0.2",
+    "react-datocms": "^1.6.3",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^2.0.3"
   },
