--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "autoprefixer": "^10.3.4",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
-    "gatsby": "^3.13.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-image": "^1.13.0",
-    "gatsby-plugin-postcss": "^4.13.0",
-    "gatsby-plugin-react-helmet": "^4.13.0",
-    "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-source-datocms": "^2.6.18",
-    "gatsby-transformer-sharp": "^3.13.0",
+    "gatsby": "alpha-9689ff",
+    "gatsby-plugin-image": "alpha-9689ff",
+    "gatsby-plugin-postcss": "alpha-9689ff",
+    "gatsby-plugin-react-helmet": "alpha-9689ff",
+    "gatsby-plugin-sharp": "alpha-9689ff",
+    "gatsby-source-datocms": "next",
+    "gatsby-transformer-sharp": "alpha-9689ff",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-datocms": "^1.6.3",
