update gatsby dependencies to next

--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "autoprefixer": "^10.3.4",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
-    "gatsby": "alpha-9689ff",
-    "gatsby-plugin-image": "alpha-9689ff",
-    "gatsby-plugin-postcss": "alpha-9689ff",
-    "gatsby-plugin-react-helmet": "alpha-9689ff",
-    "gatsby-plugin-sharp": "alpha-9689ff",
+    "gatsby": "next",
+    "gatsby-plugin-image": "next",
+    "gatsby-plugin-postcss": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sharp": "next",
     "gatsby-source-datocms": "next",
-    "gatsby-transformer-sharp": "alpha-9689ff",
+    "gatsby-transformer-sharp": "next",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-datocms": "^1.6.3",
