--- a/package.json
+++ b/package.json
@@ -19,17 +19,28 @@
     "autoprefixer": "^10.2.4",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.32.4",
+    "gatsby": "^3.14.2",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-source-datocms": "^2.5.12",
-    "postcss": "^8.2.6",
+    "postcss": "^8.3.9",
     "react": "^16.13.1",
     "react-datocms": "^1.5.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^2.0.3"
+  },
+  "resolutions": {
+    "trim": "0.0.3",
+    "browserslist": "4.16.5",
+    "ws": "7.4.6",
+    "ansi-html": "0.0.7",
+    "immer": "9.0.6",
+    "set-value": "4.0.1",
+    "object-path": "0.11.8",
+    "nth-check": "2.0.1",
+    "ansi-regex": "5.0.1"
   }
 }
