--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "autoprefixer": "^10.3.4",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
-    "gatsby": "^4.0.0-zz-next.2",
-    "gatsby-plugin-image": "^2.0.0-zz-next.2",
-    "gatsby-plugin-postcss": "^5.0.0-zz-next.1",
-    "gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
-    "gatsby-plugin-sharp": "^4.0.0-zz-next.2",
-    "gatsby-source-datocms": "^2.7.0-next.0",
-    "gatsby-transformer-sharp": "^4.0.0-zz-next.1",
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-postcss": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-source-datocms": "^2.6.18",
+    "gatsby-transformer-sharp": "^4.0.0",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-datocms": "^1.6.3",
