--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-source-datocms": "^2.6.18",
+    "gatsby-source-datocms": "^2.7.0-next.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
