--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
@@ -26,12 +25,9 @@
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-datocms": "^4.0.4",
     "gatsby-transformer-sharp": "^4.24.0",
-    "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-datocms": "^3.1.3",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "tailwindcss": "^3.2.1"
+    "react-dom": "^18.2.0"
   },
   "resolutions": {
     "trim": "0.0.3",
@@ -43,5 +39,9 @@
     "object-path": "0.11.8",
     "nth-check": "2.0.1",
     "ansi-regex": "5.0.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
+    "tailwindcss": "^3.2.1"
   }
 }
