--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gatsby-transformer-sharp": "^4.24.0",
     "react": "^18.2.0",
     "react-datocms": "^3.1.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "resolutions": {
     "trim": "0.0.3",
